Change Grigorchuk diagram

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,9 @@
-thesis.aux
-thesis.bbl
-thesis.blg
-thesis.fdb_latexmk
-thesis.fls
-thesis.log
-thesis.out
-thesis.toc
+*.aux
+*.bbl
+*.blg
+*.fdb_latexmk
+*.fls
+*.log
+*.out
+*.toc
+*.dvi
